EKS/deployment.yaml

---
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wordpress
  name: deployment-wordpress
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: wordpress
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wordpress
    spec:
      containers:
      - image: public.ecr.aws/bitnami/wordpress:latest
        imagePullPolicy: Always
        name: wordpress
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress
  name: service-wordpress
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: wordpress
